@@ -1,3 +1,11 @@
+2020-04-28  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* combo-box: more intelligent reporting on whether the Enter
+	key did something, in a combo-box.
+
+	* focusable_label: autofocus by default, so standard combo-boxes
+	in new dialogs get input focus by default.
+
 2020-04-19  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* container-><name>layout(): get_layoutmanager() shortcuts for all
